// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/group_settings/GroupRow should match snapshot, on checked row 1`] = `
<div
  className="group checked"
  onClick={[Function]}
>
  <div
    className="group-row"
  >
    <div
      className="group-check checked"
    >
      <CheckboxCheckedIcon />
    </div>
    <span
      className="group-name"
    >
      name
    </span>
    <span
      className="group-description"
    >
      <a
        href="#"
        onClick={[Function]}
      >
        <i
          className="icon fa fa-unlink"
        />
        <FormattedMessage
          defaultMessage="Not Linked"
          id="admin.group_settings.group_row.not_linked"
          values={Object {}}
        />
      </a>
    </span>
    <span
      className="group-actions"
    />
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupRow should match snapshot, on failed linked row 1`] = `
<div
  className="group "
  onClick={[Function]}
>
  <div
    className="group-row"
  >
    <div
      className="group-check "
    />
    <span
      className="group-name"
    >
      name
    </span>
    <span
      className="group-description"
    >
      <a
        className="warning"
        href="#"
        onClick={[Function]}
      >
        <i
          className="icon fa fa-exclamation-triangle"
        />
        <FormattedMessage
          defaultMessage="Unlink failed"
          id="admin.group_settings.group_row.unlink_failed"
          values={Object {}}
        />
      </a>
    </span>
    <span
      className="group-actions"
    >
      <Link
        to="/admin_console/user_management/groups/group-id"
      >
        <FormattedMessage
          defaultMessage="Configure"
          id="admin.group_settings.group_row.configure"
          values={Object {}}
        />
      </Link>
    </span>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupRow should match snapshot, on failed not linked row 1`] = `
<div
  className="group "
  onClick={[Function]}
>
  <div
    className="group-row"
  >
    <div
      className="group-check "
    />
    <span
      className="group-name"
    >
      name
    </span>
    <span
      className="group-description"
    >
      <a
        className="warning"
        href="#"
        onClick={[Function]}
      >
        <i
          className="icon fa fa-exclamation-triangle"
        />
        <FormattedMessage
          defaultMessage="Link failed"
          id="admin.group_settings.group_row.link_failed"
          values={Object {}}
        />
      </a>
    </span>
    <span
      className="group-actions"
    />
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupRow should match snapshot, on linked and configured row 1`] = `
<div
  className="group "
  onClick={[Function]}
>
  <div
    className="group-row"
  >
    <div
      className="group-check "
    />
    <span
      className="group-name"
    >
      name
    </span>
    <span
      className="group-description"
    >
      <a
        href="#"
        onClick={[Function]}
      >
        <i
          className="icon fa fa-link"
        />
        <FormattedMessage
          defaultMessage="Linked"
          id="admin.group_settings.group_row.linked"
          values={Object {}}
        />
      </a>
    </span>
    <span
      className="group-actions"
    >
      <Link
        to="/admin_console/user_management/groups/group-id"
      >
        <FormattedMessage
          defaultMessage="Edit"
          id="admin.group_settings.group_row.edit"
          values={Object {}}
        />
      </Link>
    </span>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupRow should match snapshot, on linked but not configured row 1`] = `
<div
  className="group "
  onClick={[Function]}
>
  <div
    className="group-row"
  >
    <div
      className="group-check "
    />
    <span
      className="group-name"
    >
      name
    </span>
    <span
      className="group-description"
    >
      <a
        href="#"
        onClick={[Function]}
      >
        <i
          className="icon fa fa-link"
        />
        <FormattedMessage
          defaultMessage="Linked"
          id="admin.group_settings.group_row.linked"
          values={Object {}}
        />
      </a>
    </span>
    <span
      className="group-actions"
    >
      <Link
        to="/admin_console/user_management/groups/group-id"
      >
        <FormattedMessage
          defaultMessage="Configure"
          id="admin.group_settings.group_row.configure"
          values={Object {}}
        />
      </Link>
    </span>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupRow should match snapshot, on not linked row 1`] = `
<div
  className="group "
  onClick={[Function]}
>
  <div
    className="group-row"
  >
    <div
      className="group-check "
    />
    <span
      className="group-name"
    >
      name
    </span>
    <span
      className="group-description"
    >
      <a
        href="#"
        onClick={[Function]}
      >
        <i
          className="icon fa fa-unlink"
        />
        <FormattedMessage
          defaultMessage="Not Linked"
          id="admin.group_settings.group_row.not_linked"
          values={Object {}}
        />
      </a>
    </span>
    <span
      className="group-actions"
    />
  </div>
</div>
`;
